@@ -1,3 +1,9 @@
+2006-12-07  Adam Petaccia <adam@tpetaccia.com>
+	
+	* src/sj-main.c:
+	* src/sj-prefs.c:
+	Mark some data as const (#383488)
+
 2006-12-05  Ross Burton  <ross@burtonini.com>
 
 	* data/Makefile.am:
